[package]
name = "sud"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Alternative to serde"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/sud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
