[package]
name = "sud-json"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "Alternative to serde"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
repository = "https://github.com/conradludgate/sud"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sud-core = { version = "0.0.0", path = "../core" }
itoa = "1.0.9"
ryu = "1.0.15"
